Fix background color for selected entries when using dark mode
Fixes #98
Fixes #184

--- a/css/app.css
+++ b/css/app.css
@@ -32,7 +32,7 @@
 }
 
 .highlight-enter.highlight-enter-active {
-	background-color: white;
+	background-color: var(--color-main-background);
 	transition: background 1500ms ease-in;
 }
 
